M02 getting to know godot completed

--- a/M02.getting_to_know_godot/.godot/editor/editor_layout.cfg
+++ b/M02.getting_to_know_godot/.godot/editor/editor_layout.cfg
@@ -19,24 +19,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://levels/rooms/chests/chest.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://player/", "res://levels/", "res://levels/rooms/", "res://levels/rooms/chests/", "res://levels/background/", "res://interface/", "res://interface/bars/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://completed_project.tscn")
-current_scene="res://completed_project.tscn"
+open_scenes=PackedStringArray("res://completed_project.tscn", "res://player/player.tscn", "res://start.tscn", "res://levels/rooms/room_a.tscn", "res://levels/rooms/chests/chest.tscn")
+current_scene="res://levels/rooms/chests/chest.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://game.gd"]
-selected_script="res://game.gd"
+open_scripts=["res://levels/background/background_blue_sky.gd", "res://levels/base_room.gd", "res://levels/rooms/chests/chest.gd", "res://game.gd", "res://levels/background/loop_clouds.gd", "res://player/player.gd", "res://interface/bars/ui_health_bar.gd"]
+selected_script="res://levels/rooms/chests/chest.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
