adding rogue goblin structure

--- a/M02.getting_to_know_godot/.godot/editor/editor_layout.cfg
+++ b/M02.getting_to_know_godot/.godot/editor/editor_layout.cfg
@@ -28,15 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://completed_project.tscn", "res://player/player.tscn", "res://start.tscn", "res://levels/rooms/room_a.tscn", "res://levels/rooms/chests/chest.tscn")
-current_scene="res://levels/rooms/chests/chest.tscn"
+current_scene="res://start.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://levels/background/background_blue_sky.gd", "res://levels/base_room.gd", "res://levels/rooms/chests/chest.gd", "res://game.gd", "res://levels/background/loop_clouds.gd", "res://player/player.gd", "res://interface/bars/ui_health_bar.gd"]
-selected_script="res://levels/rooms/chests/chest.gd"
+selected_script="res://game.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
